<resources>
    <string name="app_name">Transformasi Kelembagaan DJKN</string>

    <string name="urlall">http://www.djkn.kemenkeu.go.id/transformasi/api/contents</string>
    <string name="urlnews">http://www.djkn.kemenkeu.go.id/transformasi/api/contents/news</string>
    <string name="urlarticles">http://www.djkn.kemenkeu.go.id/transformasi/api/contents/article</string>
    <string name="urlthumb">http://www.djkn.kemenkeu.go.id/transformasi/</string>
    <string name="urlslug">http://www.djkn.kemenkeu.go.id/transformasi/</string>
    <string name="urlcounter">http://www.djkn.kemenkeu.go.id/transformasi/api/content_counter/</string>

    <string name="title1">REFORMASI BIROKRASI DAN TRANSFORMASI KELEMBAGAAN</string>
    <string name="title2">Direktorat Jenderal Kekayaan Negara</string>
    <string name="version">Direktorat Jenderal Kekayaan Negara</string>
    <string name="title_action">SWIPE</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Bookmark</string>
    <string name="title_section3">Logout</string>
    <string name="title_section4">Category</string>
    <string name="title_section41">News</string>
    <string name="title_section42">Articles</string>
    <string name="title_section5">Archives</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Cari</string>

    <string name="action_star">Star article</string>
    <string name="action_share">Berbagi</string>

    <string name="pref_star">star</string>

</resources>
