<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".NavigationDrawerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:background="@color/primary"
          android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:background="@color/drawer"
        android:gravity="center"
        android:layout_height="168dp">

        <ImageView
            android:src="@mipmap/logodjkn"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:typeface="roboto_condensed_regular"
            android:textColor="@color/primary"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Aplikasi Transformasi Kelembagaan"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:typeface="roboto_condensed_regular"
            android:textColor="@color/primary"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:text="@string/title2"/>

    </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="?attr/background"
        android:layout_height="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/btngreen"
        android:id="@+id/LinearLayoutHome"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="64dp">

        <ImageView
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/logowhite"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:paddingLeft="32dp"
            android:gravity="left|center_vertical"
            android:layout_height="match_parent"
            app:typeface="roboto_condensed_regular"
            android:textColor="@color/primary"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/title_section1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="?attr/background"
        android:layout_height="1dp"/>

        <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:weightSum="1"-->
        <!--android:paddingLeft="8dp"-->
        <!--android:paddingRight="8dp"-->
        <!--android:paddingTop="8dp"-->
        <!--android:paddingBottom="8dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="?attr/background"-->
        <!--android:id="@+id/LinearLayoutCategory"-->
        <!--android:descendantFocusability="blocksDescendants"-->
        <!--android:layout_height="40dp">-->

        <!--<ImageView-->
        <!--android:layout_weight="0.1"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"/>-->

        <!--<com.devspark.robototextview.widget.RobotoTextView-->
        <!--android:layout_weight="0.7"-->
        <!--android:layout_width="0dp"-->
        <!--android:paddingLeft="32dp"-->
        <!--android:gravity="left|center_vertical"-->
        <!--android:layout_height="match_parent"-->
        <!--app:typeface="roboto_condensed_regular"-->
        <!--android:textColor="@color/primary"-->
        <!--style="@style/Base.TextAppearance.AppCompat.Medium"-->
        <!--android:text="@string/title_section4"/>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="?attr/background"-->
        <!--android:layout_height="1dp"/>-->

        <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:background="@drawable/btngreen"
        android:id="@+id/LinearLayoutNews"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="48dp">

            <ImageView
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:paddingLeft="32dp"
                android:gravity="left|center_vertical"
                android:layout_height="match_parent"
                app:typeface="roboto_condensed_regular"
                android:textColor="@color/primary"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/title_section41"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="?attr/background"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:background="@drawable/btngreen"
            android:id="@+id/LinearLayoutArticles"
            android:descendantFocusability="blocksDescendants"
            android:layout_height="48dp">

            <ImageView
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:paddingLeft="32dp"
                android:gravity="left|center_vertical"
                android:layout_height="match_parent"
                app:typeface="roboto_condensed_regular"
                android:textColor="@color/primary"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/title_section42"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="?attr/background"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
        android:id="@+id/LinearLayoutStar"
        android:descendantFocusability="blocksDescendants"
        android:background="@drawable/btngreen"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <ImageView
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_star"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:paddingLeft="32dp"
            android:gravity="left|center_vertical"
            android:layout_height="match_parent"
            app:typeface="roboto_condensed_regular"
            android:textColor="@color/primary"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/title_section2"/>

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="?attr/background"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:id="@+id/LinearLayoutArchieves"
            android:descendantFocusability="blocksDescendants"
            android:background="@drawable/btngreen"
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <ImageView
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@mipmap/archives"/>

            <com.devspark.robototextview.widget.RobotoTextView
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:paddingLeft="32dp"
                android:gravity="left|center_vertical"
                android:layout_height="match_parent"
                app:typeface="roboto_condensed_regular"
                android:textColor="@color/primary"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/title_section5"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="?attr/background"
            android:layout_height="16dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@color/drawer"
            android:layout_height="80dp"/>

        <!--<LinearLayout-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_width="match_parent"-->
    <!--android:background="@color/background"-->
    <!--android:layout_weight="0.1"-->
    <!--android:layout_height="0dp"/>-->

    <!--<LinearLayout-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="1"-->
    <!--android:paddingLeft="8dp"-->
    <!--android:paddingRight="8dp"-->
    <!--android:paddingTop="16dp"-->
    <!--android:paddingBottom="16dp"-->
    <!--android:layout_weight="0.2"-->
    <!--android:id="@+id/LinearLayoutLogout"-->
    <!--android:descendantFocusability="blocksDescendants"-->
    <!--android:background="@color/drawer"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp">-->

    <!--<TextView-->
    <!--android:layout_weight="1"-->
    <!--android:layout_width="0dp"-->
    <!--android:paddingLeft="32dp"-->
    <!--android:gravity="left|center_vertical"-->
    <!--android:layout_height="match_parent"-->
    <!--android:textColor="@color/primary"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:text="@string/title_section3"/>-->

    <!--</LinearLayout>-->


</LinearLayout>

</ScrollView>